--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+  <title>Vango web</title>
 </head>
 
 <body>
-  <h1>MY APP</h1>
-  <div id="app"></div>
+  <header>
+    <div class="cristalNegro"></div>
+    <img src="assets/logoVango.jpg" alt="logoVango">
+    <nav>
+      <ul>
+        <li><a href="#">INICIO</a></li>
+        <li><a href="#">CONTACTO</a></li>
+        <li><a href="#">MERCHANDISE</a></li>
+      </ul>
+    </nav>
+  </header>
+  <div id="app">
+    <section class="portada">
+      <h1>LA NOCHE ESTRELLADA</h1>
+      <img src="assets/nocheEstrelladaLienzo.jpg" alt="cuadroNocheEstrellada">
+    </section>
+  </div>
   <script type="module" src="scripts/main.js"></script>
 </body>
 
