--- a/src/index.html
+++ b/src/index.html
@@ -11,21 +11,101 @@
 <body>
   <header>
     <div class="cristalNegro"></div>
-    <img src="assets/logoVango.jpg" alt="logoVango">
-    <nav>
-      <ul>
-        <li><a href="#">INICIO</a></li>
-        <li><a href="#">CONTACTO</a></li>
-        <li><a href="#">MERCHANDISE</a></li>
-      </ul>
-    </nav>
+    <div class="container">
+      <img src="assets/logoVango.jpg" alt="logoVango">
+      <nav>
+        <ul>
+          <li><a href="#">INICIO</a></li>
+          <li><a href="#">CONTACTO</a></li>
+          <li><a href="#">MERCHANDISE</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
+  <main>
   <div id="app">
     <section class="portada">
       <h1>LA NOCHE ESTRELLADA</h1>
       <img src="assets/nocheEstrelladaLienzo.jpg" alt="cuadroNocheEstrellada">
     </section>
+
+    <section class="descripcionCuadro">
+      <div class="container">
+        <article id="ciudadCuadro">
+          <div class="texto">
+            <p>
+              La noche estrellada es un óleo sobre lienzo del pintor postimpresionista neerlandés Vincent van Gogh.
+            </p>
+            <p>
+              Pintado en junio de 1889, representa la vista desde la ventana orientada al este de su habitación de asilo
+              en Saint-Rémy-de-Provence, justo antes del amanecer, con la adición de un pueblo imaginario.
+            </p>
+          </div>
+          <figure>
+            <img src="assets/ciudad.jpg" alt="ciudad">
+            <figcaption>Saint-Rémy-de-Provence</figcaption>
+          </figure>
+        </article>
+
+        <article id="museoCuadro">
+          <figure>
+            <img src="assets/museo.jpg" alt="ciudad">
+            <figcaption>Museo de Arte Moderno de la ciudad de Manhattan, Nueva York</figcaption>
+          </figure>
+          <div class="texto">
+            <p>
+              Ha estado en la colección permanente del Museo de Arte Moderno de la ciudad de Nueva York desde 1941,
+              adquirida a través de Lillie P. Bliss Bequest.
+            </p>
+            <p>
+              Ampliamente considerada como la obra maestra del pintor. La noche estrellada es una de las pinturas más
+              reconocidas en la historia de la cultura occidental.
+            </p>
+          </div>
+        </article>
+
+        <div class="buttonContainer">
+          <a href="https://es.wikipedia.org/wiki/La_noche_estrellada" target="_blank"><button type="button">APRENDER
+              MAS</button></a>
+        </div>
+      </div>
+    </section>
+
+    <section class="biografia">
+      <div class="container">
+        <h2>VAN GOGH</h2>
+        <article id="biografiaArticle">
+          <div class="texto">
+            <p>
+              Pintó unos 800 cuadros (entre ellos 43 autorretratos y 148 acuarelas) y realizó más de 1600 dibujos. Una
+              figura central en su vida fue su hermano menor Theo Van Gogh, marchante de arte en París, quien le prestó
+              apoyo financiero de manera continua y desinteresada.
+            </p>
+            <p>
+              La gran amistad entre ellos está documentada en las numerosas cartas que se intercambiaron desde agosto de
+              1872. De las 800 cartas que se conservan del pintor, unas 650 fueron para Theo; las otras son
+              correspondencia con amigos y familiares.
+            </p>
+          </div>
+          <figure>
+            <img src="assets/retrato.jpg" alt="ciudad">
+            <figcaption>Autorretrato (Van Gogh; agosto de 1889)</figcaption>
+          </figure>
+          </article>
+          <div class="buttonContainer">
+            <a href="https://es.wikipedia.org/wiki/Vincent_van_Gogh" target="_blank"><button type="button">DESCUBRIR
+                MAS</button></a>
+          </div>
+      </div>
+    </section>
   </div>
+  </main>
+  <footer>
+    <div class="cristalNegro"></div>
+    <div class="container">
+      <img src="assets/logo.jpg" alt="">
+    </div>
+  </footer>
   <script type="module" src="scripts/main.js"></script>
 </body>
 
