--- a/src/index.html
+++ b/src/index.html
@@ -107,17 +107,19 @@
         <div class="grupo-form motivo-grupo-form">
           <label for="">Motivo: </label>
           
-          <label for="motivoQueja" class="etiqueta">
-            <input type="checkbox" name="motivo" value="queja" id="motivoQueja"> Queja
-          </label>
+          <div>
+            <label for="motivoQueja" class="etiqueta">
+              <input type="checkbox" name="motivo" value="queja" id="motivoQueja"> Queja
+            </label>
 
-          <label for="motivoConsejo" class="etiqueta">
-            <input type="checkbox" name="motivo" value="consejo" id="motivoConsejo"> Consejo
-          </label>
+            <label for="motivoConsejo" class="etiqueta">
+              <input type="checkbox" name="motivo" value="consejo" id="motivoConsejo"> Consejo
+            </label>
 
-          <label for="motivoBug" class="etiqueta">
-            <input type="checkbox" name="motivo" value="bug" id="motivoBug"> Bug
-          </label>
+            <label for="motivoBug" class="etiqueta">
+              <input type="checkbox" name="motivo" value="bug" id="motivoBug"> Bug
+            </label>
+          </div>
         </div>
 
         <div class="grupo-form email-grupo-form">
@@ -158,10 +160,10 @@
     <div class="container">
       <div class="iconosContenedor">
         <div class="iconosSocials">
-          <a href="http://twitter.com"><i class="fa-brands fa-twitter"></i></a>
-          <a href="http://facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
-          <a href="http://youtube.com"><i class="fa-brands fa-youtube"></i></a>
-          <a href="http://github.com"><i class="fa-brands fa-github"></i></a>
+          <a href="http://twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+          <a href="http://facebook.com" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="http://youtube.com" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+          <a href="http://github.com" target="_blank"><i class="fa-brands fa-github"></i></a>
         </div>
         <div class="iconosHome">
           <a href="#" class="botonInicio">
